--- a/styles.css
+++ b/styles.css
@@ -322,6 +322,81 @@ header {
     text-align: center;
 }
 
+.banner{
+    display: grid;
+    padding-block: 5rem;
+}
+
+.banner__image{
+    min-height: 200px;
+    background-image: url("assets/banner.jpg");
+    background-position: center center ;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.banner__content{
+    padding-block: 2rem 5rem;
+    padding-inline: 1rem;
+    border-top: 2px solid rgba(0, 0, 0, 0.1);
+}
+
+.banner__content .section__description {
+    margin-block: 1rem 4rem;
+}
+
+.banner__flex{
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+.banner__card{
+    flex: 1;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+.banner__card img{
+    max-width: 50px;
+    margin-inline: auto;
+    margin-bottom: 1rem;
+}
+.banner__card h4{
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--text-dark);
+    text-align: center;
+}
+
+.subscribe__content{
+    padding: 5rem 1rem;
+    background-color: #fde6f2;
+}
+
+.subscribe__content .section__description{
+    margin-block: 1rem 2rem;
+    max-width: 600px;
+    margin-inline: auto;
+}
+
+.subscribe__content form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem 2rem;
+    flex-direction: column;
+}
+.subscribe__content input{
+    width: 100%;
+    max-width: 400px;
+    padding: calc(1rem - 2px);
+    font-size: 1rem;
+    color: var(--text-dark);
+    background-color: transparent;
+    outline: none;
+    border: 1px solid var(--text-dark);
+    border-radius: 5px;
+}
 @media (width>540px) {
     .popular__grid {
         grid-template-columns: repeat(2, 1fr);
@@ -330,8 +405,53 @@ header {
     .discover__card img {
         height: 300px;
     }
+
+    .banner__image{
+        min-height: 300px;
+    }
+    .subscribe__content form {
+        flex-direction: row;
+    }
 }
 
+.footer{
+    background-color: var(--extra-light);
+}
+.footer__container{
+    display: flex;
+    flex-direction: column;
+    gap: 4rem 2rem;
+}
+.footer__col{
+    text-align: center;
+}
+.footer__col .logo {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--text-dark);
+}
+.footer__col .logo span {
+    color: var(--primary-color);
+}
+.footer__links{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.footer__links a{
+  font-weight: 500;
+  color: var(--text-dark);
+  white-space: nowrap;  
+}
+.footer__links a:hover{
+    color: var(--primary-color);
+}
+.footer__bar {
+    padding: 1rem;
+    font-size: 1rem;
+    color: var(--text-dark);
+    text-align: center;
+}
 @media (width>768px) {
     nav {
         position: static;
@@ -444,10 +564,59 @@ header {
     .discover__card:nth-child(2) .discover__card__content{
         order: -1;
     }
+    .discover__card__content 
+    :is(h4, .section__description, h3, .discover__card__btn){
+        text-align: left;
+    }
+
+    .banner{
+        grid-template-columns: 
+        minmax(0, 1fr)
+        minmax(0, calc(var(--max-width)/2))
+        minmax(0, calc(var(--max-width)/2))
+        minmax(0, 1fr);
+        text-align: center;
+    }
+
+    .banner__image{
+        grid-column: 3/5;
+        min-height: 100%;
+    }
+    .banner__content{
+        grid-area: 1/2/2/3;
+        padding-block: 2rem;
+        padding-inline: 1rem 2rem;
+    }
+    .banner__content :is(.section__header, .section__description){
+        text-align: left;
+    }
+    .footer__container{
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .footer__col:nth-child(1),
+    .footer__col:nth-child(3) {
+        flex: 1;
+        text-align: left;
+    }
+    .footer__links{
+        flex-direction: row;
+        justify-content: center;
+        gap: 2rem;
+        flex-wrap: wrap;
+    }
+
+    .footer__col .socials {
+        justify-content: flex-end;
+    }
 }
 
 @media(width>1027px) {
     .popular__grid {
         gap: 2rem;
+    }
+    .discover__card{
+        gap: 4rem;
     }
 }
